--- a/index.html
+++ b/index.html
@@ -29,35 +29,16 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <img src="/app-logo.png" alt="CoApps Logo" class="logo-image">
-                <span class="logo-text">
-                    <span class="typing-text">Co</span>Apps
-                </span>
-            </div>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#home" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#apps" class="nav-link">Apps</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#contact" class="nav-link">Contact</a>
-                </li>
-            </ul>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+                <span class="logo-text">CoApps</span>
             </div>
         </div>
     </nav>
 
-    <section id="home" class="hero">
+    <section class="hero">
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    Improving Lifestyle with
-                    <span class="gradient-text">AI-Powered Apps</span>
+                    <span class="typing-text">Improving Lifestyle with AI-Powered Apps</span>
                 </h1>
                 <p class="hero-subtitle">
                     We create intelligent applications that enhance your daily life through 
@@ -65,9 +46,8 @@
                     <span class="highlight-text">Collaborative</span>, and 
                     <span class="highlight-text">Community</span>-driven solutions.
                 </p>
-                <div class="hero-buttons">
-                    <a href="#apps" class="btn btn-primary">Explore Apps</a>
-                    <a href="#contact" class="btn btn-secondary">Get in Touch</a>
+                <div class="coming-soon-badge">
+                    <span class="badge-text">Apps Coming Soon!</span>
                 </div>
             </div>
             <div class="hero-visual">
@@ -100,179 +80,6 @@
             <div class="gradient-orb"></div>
         </div>
     </section>
-
-    <section id="apps" class="apps">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Our Apps</h2>
-                <p class="section-subtitle">Discover our collection of AI-powered lifestyle applications</p>
-            </div>
-            <div class="apps-grid">
-                <div class="app-card">
-                    <div class="app-icon">
-                        <i class="fas fa-dumbbell"></i>
-                    </div>
-                    <h3>FitFlow</h3>
-                    <p>AI-powered fitness companion that adapts to your lifestyle and goals, providing personalized workout plans and motivation.</p>
-                    <div class="app-features">
-                        <span class="feature-tag">AI Personalization</span>
-                        <span class="feature-tag">Progress Tracking</span>
-                        <span class="feature-tag">Community Challenges</span>
-                    </div>
-                    <div class="app-status">
-                        <span class="status-badge coming-soon">Coming Soon</span>
-                    </div>
-                </div>
-                <div class="app-card">
-                    <div class="app-icon">
-                        <i class="fas fa-leaf"></i>
-                    </div>
-                    <h3>MindfulMe</h3>
-                    <p>Intelligent mindfulness and meditation app that learns your patterns and guides you toward mental wellness.</p>
-                    <div class="app-features">
-                        <span class="feature-tag">AI Guidance</span>
-                        <span class="feature-tag">Mood Tracking</span>
-                        <span class="feature-tag">Personalized Sessions</span>
-                    </div>
-                    <div class="app-status">
-                        <span class="status-badge in-development">In Development</span>
-                    </div>
-                </div>
-                <div class="app-card">
-                    <div class="app-icon">
-                        <i class="fas fa-utensils"></i>
-                    </div>
-                    <h3>NutriSmart</h3>
-                    <p>Smart nutrition planning app that creates personalized meal plans based on your preferences and health goals.</p>
-                    <div class="app-features">
-                        <span class="feature-tag">AI Meal Planning</span>
-                        <span class="feature-tag">Recipe Suggestions</span>
-                        <span class="feature-tag">Health Tracking</span>
-                    </div>
-                    <div class="app-status">
-                        <span class="status-badge planning">Planning</span>
-                    </div>
-                </div>
-                <div class="app-card">
-                    <div class="app-icon">
-                        <i class="fas fa-home"></i>
-                    </div>
-                    <h3>HomeHub</h3>
-                    <p>Intelligent home management app that learns your routines and optimizes your living space for comfort and efficiency.</p>
-                    <div class="app-features">
-                        <span class="feature-tag">Smart Automation</span>
-                        <span class="feature-tag">Energy Optimization</span>
-                        <span class="feature-tag">Routine Learning</span>
-                    </div>
-                    <div class="app-status">
-                        <span class="status-badge concept">Concept</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact" class="contact">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Get In Touch</h2>
-                <p class="section-subtitle">Interested in our apps? Let's connect!</p>
-            </div>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-envelope"></i>
-                        </div>
-                        <div class="contact-details">
-                            <h3>Email</h3>
-                            <p>hello@co-apps.com</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-map-marker-alt"></i>
-                        </div>
-                        <div class="contact-details">
-                            <h3>Location</h3>
-                            <p>San Francisco, CA</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-clock"></i>
-                        </div>
-                        <div class="contact-details">
-                            <h3>Response Time</h3>
-                            <p>Within 24 hours</p>
-                        </div>
-                    </div>
-                </div>
-                <form class="contact-form">
-                    <div class="form-group">
-                        <input type="text" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="form-group">
-                        <select required>
-                            <option value="">Select Interest</option>
-                            <option value="fitflow">FitFlow - Fitness App</option>
-                            <option value="mindfulme">MindfulMe - Wellness App</option>
-                            <option value="nutrismart">NutriSmart - Nutrition App</option>
-                            <option value="homehub">HomeHub - Smart Home App</option>
-                            <option value="general">General Inquiry</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <textarea placeholder="Your Message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <div class="footer-logo">
-                        <img src="/app-logo.png" alt="CoApps Logo" class="logo-image">
-                        <span class="logo-text">CoApps</span>
-                    </div>
-                    <p>Improving lifestyle with AI-powered applications. Constructive, Collaborative, and Community-driven solutions for modern living.</p>
-                    <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-                <div class="footer-section">
-                    <h4>Apps</h4>
-                    <ul>
-                        <li><a href="#apps">FitFlow</a></li>
-                        <li><a href="#apps">MindfulMe</a></li>
-                        <li><a href="#apps">NutriSmart</a></li>
-                        <li><a href="#apps">HomeHub</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Company</h4>
-                    <ul>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 CoApps. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
 
     <script src="script.js"></script>
 </body>
