--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         </section>
     </main>
 
+    <!-- Floating Shapes Container -->
+    <div class="floating-shapes"></div>
+
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
