--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:image" content="https://co-apps.com/og-image.png">
     <link rel="canonical" href="https://co-apps.com">
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" type="image/png" href="/new_logo.png">
+    <link rel="icon" type="image/png" href="/logo_white.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -28,7 +28,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="/new_logo.png" alt="CoApps Logo" class="logo-image">
+                <img src="/logo_white.png" alt="CoApps Logo" class="logo-image">
                 <span class="logo-text">CoApps</span>
             </div>
         </div>
@@ -74,7 +74,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="footer-logo">
-                        <img src="/new_logo.png" alt="CoApps Logo" class="logo-image">
+                        <img src="/logo_white.png" alt="CoApps Logo" class="logo-image">
                         <span class="logo-text">CoApps</span>
                     </div>
                     <p class="footer-description">
