--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         </section>
     </main>
 
+    <!-- Cursor Spotlight Effect -->
+    <div class="cursor-spotlight"></div>
+    
     <!-- Floating Shapes Container -->
     <div class="floating-shapes"></div>
 
