--- a/carsight/index.html
+++ b/carsight/index.html
@@ -393,7 +393,7 @@
                 
                 <div class="app-buttons">
                     <a href="#" class="app-store-button">
-                        <img src="/apple-button.jpg" alt="Download on the App Store">
+                        <img src="/apple_button.jpg" alt="Download on the App Store">
                     </a>
                     <a href="#" class="google-play-button coming-soon">
                         <img src="/google-button.png" alt="Get it on Google Play">
