--- a/carsight/index.html
+++ b/carsight/index.html
@@ -484,7 +484,7 @@
                     <img src="/carro.png" alt="CarSight Logo">
                 </div>
                 <h1 class="hero-title">CarSight</h1>
-                <h2 class="hero-subtitle">Identify any car with just a picture</h2>
+                <h2 class="hero-subtitle">Identify any car with just a photo</h2>
                 
                 <p class="hero-description">
                     CarSight is the AI-powered app for car enthusiasts. Snap a photo, scan a car, or browse your digital garage to track your favorite vehicles.
