--- a/carsight/index.html
+++ b/carsight/index.html
@@ -487,7 +487,7 @@
                 <h2 class="hero-subtitle">Identify any car with just a photo</h2>
                 
                 <p class="hero-description">
-                    CarBot is the AI-powered app for car enthusiasts. Snap a photo, scan a car, or browse your digital garage to track your favorite vehicles.
+                    CarBot is the AI-powered app for car enthusiasts. Snap a photo, scan a car, and browse your digital garage to track your favorite vehicles.
                 </p>
                 
                 <div class="app-buttons">
