--- a/carbot/support.html
+++ b/carbot/support.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy — CarBot</title>
-    <meta name="description" content="CarBot Privacy Policy - How we collect, use, and protect your personal information.">
+    <title>Support — CarBot</title>
+    <meta name="description" content="CarBot Support - Contact us for help and assistance.">
     <link rel="icon" type="image/png" href="/carro.png">
     
     <style>
@@ -115,50 +115,17 @@
             text-align: center;
         }
 
-        .effective-date {
-            text-align: center;
-            color: rgba(255, 255, 255, 0.7);
-            margin-bottom: 32px;
-            font-size: 16px;
-        }
-
-        .company-info {
-            text-align: center;
-            margin-bottom: 32px;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        h2 {
-            font-size: 20px;
-            font-weight: 700;
-            margin: 32px 0 16px 0;
-            color: #ffffff;
-        }
-
         p {
             margin-bottom: 16px;
             color: rgba(255, 255, 255, 0.8);
             font-size: 16px;
         }
 
-        ul {
-            margin: 16px 0 16px 20px;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        li {
-            margin-bottom: 8px;
-        }
-
-        strong {
-            color: #ffffff;
-            font-weight: 600;
-        }
-
         .contact-section {
-            margin-top: 32px;
-            padding-top: 24px;
+            margin-top: 16px;
+            padding-top: 16px;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
+            text-align: center;
         }
 
         /* Footer */
@@ -211,21 +178,10 @@
 
         /* Responsive */
         @media (max-width: 768px) {
-            .container {
-                padding: 0 15px;
-            }
-
-            .content {
-                padding: 24px;
-            }
-
-            h1 {
-                font-size: 28px;
-            }
-
-            .nav-links {
-                display: none;
-            }
+            .container { padding: 0 15px; }
+            .content { padding: 24px; }
+            h1 { font-size: 28px; }
+            .nav-links { display: none; }
         }
     </style>
 </head>
@@ -249,65 +205,10 @@
 
         <main>
             <div class="content">
-                <h1>Privacy Policy</h1>
-                <div class="effective-date">Effective Date: September 6, 2025</div>
-                <div class="company-info">
-                    <strong>Company:</strong> CoApps LLC<br>
-                    <strong>App:</strong> CarBot
-                </div>
-
-                <p>At CoApps LLC, your privacy matters. This Privacy Policy explains how CarBot ("we," "our," or "us") collects, uses, and protects your information.</p>
-
-                <h2>Information We Collect</h2>
-                <p>CarBot collects limited data not linked to your personal identity:</p>
-                <ul>
-                    <li><strong>Contact Info</strong> – for inviting friends or sharing your car spots.</li>
-                    <li><strong>Location</strong> – to display your past car spots on the Car Map.</li>
-                    <li><strong>User Content</strong> – including car photos you upload, your saved "Car Garage," and groups you create with friends.</li>
-                </ul>
-                <p>We do not link this information to your identity, account, or personal identifiers.</p>
-
-                <h2>How We Use Your Information</h2>
-                <p>We use collected data to:</p>
-                <ul>
-                    <li>Identify cars from uploaded or snapped photos using AI.</li>
-                    <li>Store your detected cars in your personal "Car Garage."</li>
-                    <li>Display past car spots on your Car Map.</li>
-                    <li>Enable social features like friend groups and shared car spotting.</li>
-                </ul>
-
-                <h2>Data Sharing</h2>
-                <p>We do not sell your data. We may share anonymized or aggregated data with service providers strictly for:</p>
-                <ul>
-                    <li>AI car recognition (third-party AI providers).</li>
-                    <li>Cloud storage and hosting.</li>
-                    <li>Analytics to improve app performance.</li>
-                </ul>
-
-                <h2>Data Retention</h2>
-                <ul>
-                    <li>Car photos and saved garages are retained until you delete them.</li>
-                    <li>Location and map data are retained for functionality and cleared if you delete your account.</li>
-                    <li>We respect your right to request deletion of all data at any time.</li>
-                </ul>
-
-                <h2>Your Choices</h2>
-                <ul>
-                    <li><strong>Manage Content:</strong> You can delete car photos, garages, or group memberships at any time.</li>
-                    <li><strong>Data Deletion:</strong> You may request full deletion of your CarBot account and associated data by contacting us.</li>
-                </ul>
-
-                <h2>Children's Privacy</h2>
-                <p>CarBot is not intended for children under 13. If we discover data collected from a child, we will delete it promptly.</p>
-
-                <h2>Changes to this Policy</h2>
-                <p>We may update this Privacy Policy from time to time. Updates will be posted within the app with the new effective date.</p>
-
+                <h1>Support</h1>
                 <div class="contact-section">
-                    <h2>Contact Us</h2>
-                    <p>If you have questions, contact us:</p>
-                    <p><strong>CoApps LLC</strong><br>
-                    📧 carsightapp@gmail.com</p>
+                    <p>Reach out here for support:</p>
+                    <p>📧 carsightapp@gmail.com</p>
                 </div>
             </div>
         </main>
@@ -336,3 +237,4 @@
     </footer>
 </body>
 </html>
+
