--- a/carbot/terms.html
+++ b/carbot/terms.html
@@ -242,6 +242,7 @@
                     <a href="/carbot/" class="nav-link">Home</a>
                     <a href="/carbot/privacy.html" class="nav-link">Privacy</a>
                     <a href="/carbot/terms.html" class="nav-link">Terms</a>
+                    <a href="/carbot/support.html" class="nav-link">Support</a>
                 </div>
             </nav>
         </header>
@@ -308,7 +309,7 @@
                     <h2>10. Contact Us</h2>
                     <p>For support or legal inquiries:</p>
                     <p><strong>CoApps LLC</strong><br>
-                    📧 coappsllc@gmail.com</p>
+                    📧 carsightapp@gmail.com</p>
                 </div>
             </div>
         </main>
@@ -326,6 +327,7 @@
                     <a href="/carbot/" class="footer-link">Home</a>
                     <a href="/carbot/privacy.html" class="footer-link">Privacy Policy</a>
                     <a href="/carbot/terms.html" class="footer-link">Terms of Service</a>
+                    <a href="/carbot/support.html" class="footer-link">Support</a>
                 </div>
             </div>
             
