--- a/carbot/index.html
+++ b/carbot/index.html
@@ -542,6 +542,7 @@
                 <div class="footer-links">
                     <a href="/carbot/privacy.html" class="footer-link">Privacy Policy</a>
                     <a href="/carbot/terms.html" class="footer-link">Terms of Service</a>
+                    <a href="/carbot/support.html" class="footer-link">Support</a>
                 </div>
             </div>
             
