--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="CoApps">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="CoApps — AI-Powered Lifestyle Applications">
-    <meta property="og:description" content="building COmmunity thorugh apps.... Constructive, Collaborative, and Community-driven.">
+    <meta property="og:description" content="Improving lifestyle with AI-powered applications. Constructive, Collaborative, and Community-driven.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://co-apps.com">
     <meta property="og:image" content="https://co-apps.com/og-image.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="CoApps — AI-Powered Lifestyle Applications">
-    <meta name="twitter:description" content="building COmmunity thorugh apps....">
+    <meta name="twitter:description" content="Improving lifestyle with AI-powered applications.">
     <meta name="twitter:image" content="https://co-apps.com/og-image.png">
     <link rel="canonical" href="https://co-apps.com">
     <link rel="manifest" href="/manifest.json">
@@ -40,9 +40,9 @@
                 <div class="hero-content">
                     <header class="hero-header">
                         <h1 class="hero-title">
-                            <span class="title-line">building</span>
-                            <span class="title-line">COmmunity thorugh</span>
-                            <span class="title-line accent">apps....</span>
+                            <span class="title-line">Improving Lifestyle</span>
+                            <span class="title-line">with AI-Powered</span>
+                            <span class="title-line accent">Applications</span>
                         </h1>
                     </header>
                     
